--- a/saidbar.html
+++ b/saidbar.html
@@ -467,83 +467,81 @@
 						</h1>
 						<div class="product__content">
 							<div class="product-sliders product__images">
-								<div class="product-images__slider swiper">
-									<div class="images-product__wrapper swiper-wrapper">
-										<a href="" class="images-product__slide swiper-slide">
-											<div class="images-product__sale">-15%</div>
-											<div class="images-product__image">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                <div class="product-images__slider swiper">
+                                    <div class="images-product__wrapper swiper-wrapper">
+                                        <a href="" class="images-product__slide swiper-slide">
+                                            <div class="images-product__sale">-15%</div>
+                                            <div class="images-product__image">
+                                                <img src="@img/product/01.jpg" alt="">
 
-											</div>
-										</a>
-										<a href="" class="images-product__slide swiper-slide">
-											<div class="images-product__image">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                            </div>
+                                        </a>
+                                        <a href="" class="images-product__slide swiper-slide">
+                                            <div class="images-product__image">
+                                                <img src="@img/product/01.jpg" alt="">
 
-											</div>
-										</a>
+                                            </div>
+                                        </a>
 
-										<a href="" class="images-product__slide swiper-slide">
-											<div class="images-product__sale">-15%</div>
-											<div class="images-product__image">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                        <a href="" class="images-product__slide swiper-slide">
+                                            <div class="images-product__sale">-15%</div>
+                                            <div class="images-product__image">
+                                                <img src="@img/product/01.jpg" alt="">
 
-											</div>
-										</a>
-										<a href="" class="images-product__slide swiper-slide">
-											<div class="images-product__image">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                            </div>
+                                        </a>
+                                        <a href="" class="images-product__slide swiper-slide">
+                                            <div class="images-product__image">
+                                                <img src="@img/product/01.jpg" alt="">
 
-											</div>
-										</a>
-										<a href="" class="images-product__slide swiper-slide">
-											<div class="images-product__sale">-15%</div>
-											<div class="images-product__image">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                            </div>
+                                        </a>
+                                        <a href="" class="images-product__slide swiper-slide">
+                                            <div class="images-product__sale">-15%</div>
+                                            <div class="images-product__image">
+                                                <img src="@img/product/01.jpg" alt="">
 
-											</div>
-										</a>
-									</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="images-product-subslide__slider swiper thumbs-slider">
+                                    <div class="images-product-subslider__wrapper swiper-wrapper">
 
+                                        <div class="images-product-subslider__slide swiper-slide">
+                                            <div class="images-product-subslider__subimage ">
+                                                <img src="img/product/01.jpg" alt="">
 
-								</div>
-								<div class="images-product-subslide__slider swiper">
-									<div class="images-product-subslider__wrapper swiper-wrapper">
+                                            </div>
+                                        </div>
+                                        <div class="images-product-subslider__slide swiper-slide">
+                                            <div class="images-product-subslider__subimage ">
+                                                <img src="img/product/01.jpg" alt="">
 
-										<div class="images-product-subslider__slide swiper-slide">
-											<div class="images-product-subslider__subimage ">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                            </div>
+                                        </div>
+                                        <div class="images-product-subslider__slide swiper-slide">
+                                            <div class="images-product-subslider__subimage ">
+                                                <img src="img/product/01.jpg" alt="">
 
-											</div>
-										</div>
-										<div class="images-product-subslider__slide swiper-slide">
-											<div class="images-product-subslider__subimage ">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                            </div>
+                                        </div>
+                                        <div class="images-product-subslider__slide swiper-slide">
+                                            <div class="images-product-subslider__subimage ">
+                                                <img src="img/product/01.jpg" alt="">
 
-											</div>
-										</div>
-										<div class="images-product-subslider__slide swiper-slide">
-											<div class="images-product-subslider__subimage ">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                            </div>
+                                        </div>
+                                        <div class="images-product-subslider__slide swiper-slide">
+                                            <div class="images-product-subslider__subimage ">
+                                                <img src="img/product/01.jpg" alt="">
 
-											</div>
-										</div>
-										<div class="images-product-subslider__slide swiper-slide">
-											<div class="images-product-subslider__subimage ">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
+                                            </div>
+                                        </div>
 
-											</div>
-										</div>
-										<div class="images-product-subslider__slide swiper-slide">
-											<div class="images-product-subslider__subimage ">
-												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
-
-											</div>
-										</div>
-
-									</div>
-								</div>
-							</div>
+                                    </div>
+                                </div>
+                            </div>
 
 							<div class="product__body body-product">
 								<div class="body-product__top">
