--- a/saidbar.html
+++ b/saidbar.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220706112150">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221230153017">
 	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 							<nav data-da=".menu__body,991.98,1" class="menu__box">
 								<ul class="menu__list">
 									<li><a class="menu__link" href="catalog.html">Каталог</a></li>
-									<li><a href="index.html" class="menu__link">Главная</a></li>
+									<li><a href="home.html" class="menu__link">Главная</a></li>
 									<li><a class="menu__link" href="saidbar.html">Карточка товара</a></li>
 									<li><a href="saidbar.html" class="menu__link">Гарантия</a></li>
 									<li><a href="checkout.html" class="menu__link">Оплата</a></li>
@@ -467,81 +467,81 @@
 						</h1>
 						<div class="product__content">
 							<div class="product-sliders product__images">
-                                <div class="product-images__slider swiper">
-                                    <div class="images-product__wrapper swiper-wrapper">
-                                        <a href="" class="images-product__slide swiper-slide">
-                                            <div class="images-product__sale">-15%</div>
-                                            <div class="images-product__image">
-                                                <img src="@img/product/01.jpg" alt="">
+								<div class="product-images__slider swiper">
+									<div class="images-product__wrapper swiper-wrapper">
+										<a href="" class="images-product__slide swiper-slide">
+											<div class="images-product__sale">-15%</div>
+											<div class="images-product__image">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </a>
-                                        <a href="" class="images-product__slide swiper-slide">
-                                            <div class="images-product__image">
-                                                <img src="@img/product/01.jpg" alt="">
+											</div>
+										</a>
+										<a href="" class="images-product__slide swiper-slide">
+											<div class="images-product__image">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </a>
+											</div>
+										</a>
 
-                                        <a href="" class="images-product__slide swiper-slide">
-                                            <div class="images-product__sale">-15%</div>
-                                            <div class="images-product__image">
-                                                <img src="@img/product/01.jpg" alt="">
+										<a href="" class="images-product__slide swiper-slide">
+											<div class="images-product__sale">-15%</div>
+											<div class="images-product__image">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </a>
-                                        <a href="" class="images-product__slide swiper-slide">
-                                            <div class="images-product__image">
-                                                <img src="@img/product/01.jpg" alt="">
+											</div>
+										</a>
+										<a href="" class="images-product__slide swiper-slide">
+											<div class="images-product__image">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </a>
-                                        <a href="" class="images-product__slide swiper-slide">
-                                            <div class="images-product__sale">-15%</div>
-                                            <div class="images-product__image">
-                                                <img src="@img/product/01.jpg" alt="">
+											</div>
+										</a>
+										<a href="" class="images-product__slide swiper-slide">
+											<div class="images-product__sale">-15%</div>
+											<div class="images-product__image">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="images-product-subslide__slider swiper thumbs-slider">
-                                    <div class="images-product-subslider__wrapper swiper-wrapper">
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="images-product-subslide__slider swiper thumbs-slider">
+									<div class="images-product-subslider__wrapper swiper-wrapper">
 
-                                        <div class="images-product-subslider__slide swiper-slide">
-                                            <div class="images-product-subslider__subimage ">
-                                                <img src="img/product/01.jpg" alt="">
+										<div class="images-product-subslider__slide swiper-slide">
+											<div class="images-product-subslider__subimage ">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </div>
-                                        <div class="images-product-subslider__slide swiper-slide">
-                                            <div class="images-product-subslider__subimage ">
-                                                <img src="img/product/01.jpg" alt="">
+											</div>
+										</div>
+										<div class="images-product-subslider__slide swiper-slide">
+											<div class="images-product-subslider__subimage ">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </div>
-                                        <div class="images-product-subslider__slide swiper-slide">
-                                            <div class="images-product-subslider__subimage ">
-                                                <img src="img/product/01.jpg" alt="">
+											</div>
+										</div>
+										<div class="images-product-subslider__slide swiper-slide">
+											<div class="images-product-subslider__subimage ">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </div>
-                                        <div class="images-product-subslider__slide swiper-slide">
-                                            <div class="images-product-subslider__subimage ">
-                                                <img src="img/product/01.jpg" alt="">
+											</div>
+										</div>
+										<div class="images-product-subslider__slide swiper-slide">
+											<div class="images-product-subslider__subimage ">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </div>
-                                        <div class="images-product-subslider__slide swiper-slide">
-                                            <div class="images-product-subslider__subimage ">
-                                                <img src="img/product/01.jpg" alt="">
+											</div>
+										</div>
+										<div class="images-product-subslider__slide swiper-slide">
+											<div class="images-product-subslider__subimage ">
+												<picture><source srcset="img/product/01.webp" type="image/webp"><img src="img/product/01.jpg" alt=""></picture>
 
-                                            </div>
-                                        </div>
+											</div>
+										</div>
 
-                                    </div>
-                                </div>
-                            </div>
+									</div>
+								</div>
+							</div>
 
 							<div class="product__body body-product">
 								<div class="body-product__top">
@@ -993,7 +993,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220706112150"></script>
+	<script src="js/app.min.js?_v=20221230153017"></script>
 </body>
 
 </html>
