--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220706112150">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221230153017">
 	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 							<nav data-da=".menu__body,991.98,1" class="menu__box">
 								<ul class="menu__list">
 									<li><a class="menu__link" href="catalog.html">Каталог</a></li>
-									<li><a href="index.html" class="menu__link">Главная</a></li>
+									<li><a href="home.html" class="menu__link">Главная</a></li>
 									<li><a class="menu__link" href="saidbar.html">Карточка товара</a></li>
 									<li><a href="saidbar.html" class="menu__link">Гарантия</a></li>
 									<li><a href="checkout.html" class="menu__link">Оплата</a></li>
@@ -1198,7 +1198,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220706112150"></script>
+	<script src="js/app.min.js?_v=20221230153017"></script>
 </body>
 
 </html>
