--- a/checkout.html
+++ b/checkout.html
@@ -28,7 +28,7 @@
 							<nav data-da=".menu__body,991.98,1" class="menu__box">
 								<ul class="menu__list">
 									<li><a class="menu__link" href="catalog.html">Каталог</a></li>
-									<li><a href="home.html" class="menu__link">Главная</a></li>
+									<li><a href="index.html" class="menu__link">Главная</a></li>
 									<li><a class="menu__link" href="saidbar.html">Карточка товара</a></li>
 									<li><a href="saidbar.html" class="menu__link">Гарантия</a></li>
 									<li><a href="checkout.html" class="menu__link">Оплата</a></li>
